--- a/ex06/Makefile
+++ b/ex06/Makefile
@@ -1,14 +1,14 @@
 #..............................TARGET..................................#
 
-NAME = harl
+NAME = HarlFilter
 
 #..............................COMMANDS................................#
 
-CC = c++
+CXX = c++
 
-CFLAG = -Werror -Wall -Wextra -std=c++98
+CXXFLAG = -Werror -Wall -Wextra -std=c++98
 
-DFLAG = -MMD
+DFLAG = -MMD -MP
 
 MKDIR = mkdir -p
 
@@ -18,7 +18,7 @@ RM   = rm -f
 
 SRC_DIR  = srcs/
 
-HEADER_DIR  = include/
+HEADER_DIR  = includes/
 
 OBJ_DIR    = obj/
 
@@ -26,24 +26,25 @@ OBJ_DIR    = obj/
 
 SRCS = main.cpp Harl.cpp 
 ALL_SRCS = $(addprefix $(SRC_DIR), $(SRCS))
-OBJ = $(patsubst $(SRC_DIR)%.cpp, $(OBJ_DIR)%.o, $(ALL_SRCS))
+OBJS_NAMES	= $(ALL_SRCS:.cpp=.o)
+OBJ = $(addprefix $(OBJ_DIR), $(OBJS_NAMES))
+DEPS		= $(addprefix $(OBJ_DIR), $(ALL_SRCS:.cpp=.d))
 
 #..................................HEADER................................#
 
 HEADERS = $(wildcard $(HEADER_DIR)*.hpp)
+HEADERS_INC	= $(addprefix -I, $(HEADER_DIR))
 
 #...................................MAKEFILE.............................#
 
 all: $(NAME)
 
-$(NAME): $(OBJ)
-	$(CC) $(CFLAGS) $^ -o $@
+$(NAME): $(HEADERS) $(OBJ)
+	$(CXX) $(CXXFLAG) $(HEADERS_INC) $(OBJ) -o $@
 
-$(OBJ_DIR)%.o: $(SRC_DIR)%.cpp $(HEADERS) Makefile | $(OBJ_DIR)
-	$(CC) $(CFLAGS) $(DFLAGS) -c $< -o $@
-
-$(OBJ_DIR) : 
-		$(MKDIR) $@
+$(OBJ_DIR)%.o: %.cpp
+	@mkdir -p $(OBJ_DIR)$(SRC_DIR)
+	$(CXX) $(CXXFLAG) $(DFLAG) -c $< -o $@
 
 clean :
 	$(RM) -r $(OBJ_DIR)
@@ -52,5 +53,8 @@ fclean : clean
 		$(RM) $(NAME)
 
 re : fclean all
+
+# Include all .d files
+-include $(DEPS)
 
 .PHONY : all clean fclean re
